@@ -50,15 +50,15 @@ public class PersonSearchAdapter {
             } catch (JsonProcessingException e) {
                 throw new RuntimeException("Feil med konvertering fra json: " + json, e);
             }
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
     private void queryFoedselsdato(LocalDate fom, LocalDate tom, BoolQueryBuilder queryBuilder) {
         getBetween(fom, tom, "hentPerson.foedsel.foedselsdato")
                 .ifPresent(rangeQueryBuilder -> queryBuilder.must(QueryBuilders.nestedQuery(
-                        "hentPerson.foedsel",
-                        rangeQueryBuilder,
-                        ScoreMode.Avg
+                                "hentPerson.foedsel",
+                                rangeQueryBuilder,
+                                ScoreMode.Avg
                         ))
                 );
     }
@@ -74,60 +74,19 @@ public class PersonSearchAdapter {
 
     @SneakyThrows
     public PersonList search(PersonSearch search) {
-        var queryBuilder = QueryBuilders
-                .boolQuery()
-                .must(QueryBuilders.matchQuery("tags", search.getTag()));
+        var queryBuilder = QueryBuilders.boolQuery();
 
-        Optional.ofNullable(search.getKjoenn())
-                .ifPresent(value -> queryBuilder.must(QueryBuilders.nestedQuery(
-                        "hentPerson.kjoenn",
-                        QueryBuilders.matchQuery("hentPerson.kjoenn.kjoenn", value),
-                        ScoreMode.Avg
-                )));
-
-        Optional.ofNullable(search.getFoedsel())
-                .ifPresent(value -> queryFoedselsdato(value.getFom(), value.getTom(), queryBuilder));
-
-        Optional.ofNullable(search.getAlder())
-                .ifPresent(value -> queryAlder(value.getFra(), value.getTil(), queryBuilder));
-
-        Optional.ofNullable(search.getSivilstand())
-                .flatMap(value -> Optional.ofNullable(value.getType()))
-                .ifPresent(value -> queryBuilder.must(QueryBuilders.nestedQuery(
-                        "hentPerson.sivilstand",
-                        QueryBuilders.matchQuery("hentPerson.sivilstand.type", value),
-                        ScoreMode.Avg
-                )));
-
-        Optional.ofNullable(search.getStatsborgerskap())
-                .flatMap(value -> Optional.ofNullable(value.getLand()))
-                .ifPresent(value -> queryBuilder.must(QueryBuilders.nestedQuery(
-                        "hentPerson.statsborgerskap",
-                        QueryBuilders.matchQuery("hentPerson.statsborgerskap.land", value),
-                        ScoreMode.Avg
-                )));
-
-        Optional.ofNullable(search.getUtflyttingFraNorge())
-                .ifPresent(value -> {
-                    if(value.getUtfyttet() != null && value.getUtfyttet()) {
-                        queryBuilder.must(QueryBuilders.nestedQuery(
-                                "hentPerson.utflyttingFraNorge",
-                                QueryBuilders.existsQuery("hentPerson.utflyttingFraNorge.metadata"),
-                                ScoreMode.Avg
-                        )).must();
-                    }
-                });
-
-        Optional.ofNullable(search.getInnflyttingTilNorge())
-                .ifPresent(value -> {
-                    if(value.getInnflytting() != null && value.getInnflytting()) {
-                        queryBuilder.must(QueryBuilders.nestedQuery(
-                                "hentPerson.innflyttingTilNorge",
-                                QueryBuilders.existsQuery("hentPerson.innflyttingTilNorge.metadata"),
-                                ScoreMode.Avg
-                        )).must();
-                    }
-                });
+        addTagsQueries(queryBuilder, search);
+        addKjoennQuery(queryBuilder, search);
+        addFoedselQuery(queryBuilder, search);
+        addAlderQuery(queryBuilder, search);
+        addIdentQuery(queryBuilder, search);
+        addSivilstandQuery(queryBuilder, search);
+        addStatsborgerskapQuery(queryBuilder, search);
+        addUtflyttingQuery(queryBuilder, search);
+        addInnflyttingQuery(queryBuilder, search);
+        addIdentitetQueries(queryBuilder, search);
+        addBarnQueries(queryBuilder, search);
 
         var searchRequest = new SearchRequest();
         searchRequest.indices("pdl-sok");
@@ -157,8 +116,146 @@ public class PersonSearchAdapter {
 
         return new PersonList(
                 searchResponse.getHits().getTotalHits().value,
-                responses.stream().map(Person::new).collect(Collectors.toList())
+                responses.stream().map(Person::new).toList()
         );
+    }
+
+    private void addTagsQueries(BoolQueryBuilder queryBuilder, PersonSearch search) {
+        queryBuilder.must(QueryBuilders.matchQuery("tags", search.getTag()));
+
+        Optional.ofNullable(search.getExcludeTag())
+                .ifPresent(value -> queryBuilder.mustNot(QueryBuilders.matchQuery("tags", value)));
+    }
+
+    private void addKjoennQuery(BoolQueryBuilder queryBuilder, PersonSearch search) {
+        Optional.ofNullable(search.getKjoenn())
+                .ifPresent(value -> {
+                    if (!value.isEmpty()) {
+                        queryBuilder.must(QueryBuilders.nestedQuery(
+                                "hentPerson.kjoenn",
+                                QueryBuilders.matchQuery("hentPerson.kjoenn.kjoenn", value),
+                                ScoreMode.Avg
+                        ));
+                    }
+                });
+    }
+
+    private void addFoedselQuery(BoolQueryBuilder queryBuilder, PersonSearch search) {
+        Optional.ofNullable(search.getFoedsel())
+                .ifPresent(value -> queryFoedselsdato(value.getFom(), value.getTom(), queryBuilder));
+    }
+
+    private void addAlderQuery(BoolQueryBuilder queryBuilder, PersonSearch search) {
+        Optional.ofNullable(search.getAlder())
+                .ifPresent(value -> queryAlder(value.getFra(), value.getTil(), queryBuilder));
+    }
+
+    private void addIdentQuery(BoolQueryBuilder queryBuilder, PersonSearch search) {
+        Optional.ofNullable(search.getIdenter())
+                        .ifPresent(values -> {
+                            if(!values.isEmpty()){
+                                queryBuilder.must(QueryBuilders.nestedQuery(
+                                        "hentIdenter.identer",
+                                        QueryBuilders.termsQuery("hentIdenter.identer.ident", values),
+                                        ScoreMode.Avg
+                                )).must();
+                            }
+                        });
+    }
+
+    private void addSivilstandQuery(BoolQueryBuilder queryBuilder, PersonSearch search) {
+        Optional.ofNullable(search.getSivilstand())
+                .flatMap(value -> Optional.ofNullable(value.getType()))
+                .ifPresent(value -> {
+                    if (!value.isEmpty()) {
+                        queryBuilder.must(QueryBuilders.nestedQuery(
+                                "hentPerson.sivilstand",
+                                QueryBuilders.matchQuery("hentPerson.sivilstand.type", value),
+                                ScoreMode.Avg
+                        ));
+                    }
+                });
+    }
+
+    private void addStatsborgerskapQuery(BoolQueryBuilder queryBuilder, PersonSearch search) {
+        Optional.ofNullable(search.getStatsborgerskap())
+                .flatMap(value -> Optional.ofNullable(value.getLand()))
+                .ifPresent(value -> {
+                    if (!value.isEmpty()) {
+                        queryBuilder.must(QueryBuilders.nestedQuery(
+                                "hentPerson.statsborgerskap",
+                                QueryBuilders.matchQuery("hentPerson.statsborgerskap.land", value),
+                                ScoreMode.Avg
+                        ));
+                    }
+                });
+    }
+
+    private void addUtflyttingQuery(BoolQueryBuilder queryBuilder, PersonSearch search) {
+        Optional.ofNullable(search.getUtflyttingFraNorge())
+                .ifPresent(value -> {
+                    if (value.getUtflyttet() != null && value.getUtflyttet()) {
+                        queryBuilder.must(QueryBuilders.nestedQuery(
+                                "hentPerson.utflyttingFraNorge",
+                                QueryBuilders.existsQuery("hentPerson.utflyttingFraNorge.metadata"),
+                                ScoreMode.Avg
+                        )).must();
+                    }
+                });
+    }
+
+    private void addInnflyttingQuery(BoolQueryBuilder queryBuilder, PersonSearch search) {
+        Optional.ofNullable(search.getInnflyttingTilNorge())
+                .ifPresent(value -> {
+                    if (value.getInnflytting() != null && value.getInnflytting()) {
+                        queryBuilder.must(QueryBuilders.nestedQuery(
+                                "hentPerson.innflyttingTilNorge",
+                                QueryBuilders.existsQuery("hentPerson.innflyttingTilNorge.metadata"),
+                                ScoreMode.Avg
+                        )).must();
+                    }
+                });
+    }
+
+    private void addIdentitetQueries(BoolQueryBuilder queryBuilder, PersonSearch search) {
+        Optional.ofNullable(search.getIdentitet())
+                .ifPresent(value -> {
+                    if (value.getFalskIdentitet() != null && value.getFalskIdentitet()) {
+                        queryBuilder.must(QueryBuilders.nestedQuery(
+                                "hentPerson.falskIdentitet",
+                                QueryBuilders.existsQuery("hentPerson.falskIdentitet.metadata"),
+                                ScoreMode.Avg
+                        )).must();
+                    }
+                    if (value.getUtenlandskIdentitet() != null && value.getUtenlandskIdentitet()) {
+                        queryBuilder.must(QueryBuilders.nestedQuery(
+                                "hentPerson.utenlandskIdentifikasjonsnummer",
+                                QueryBuilders.existsQuery("hentPerson.utenlandskIdentifikasjonsnummer.metadata"),
+                                ScoreMode.Avg
+                        )).must();
+                    }
+                });
+    }
+
+    private void addBarnQueries(BoolQueryBuilder queryBuilder, PersonSearch search) {
+        Optional.ofNullable(search.getBarn())
+                .ifPresent(value -> {
+                    if (value.getBarn() != null && value.getBarn()) {
+                        queryBuilder.must(QueryBuilders.nestedQuery(
+                                "hentPerson.forelderBarnRelasjon",
+                                QueryBuilders.matchQuery("hentPerson.forelderBarnRelasjon.relatertPersonsRolle", "BARN"),
+                                ScoreMode.Avg
+                        )).must();
+                    }
+
+                    if (value.getDoedfoedtBarn() != null && value.getDoedfoedtBarn()) {
+                        queryBuilder.must(QueryBuilders.nestedQuery(
+                                "hentPerson.doedfoedtBarn",
+                                QueryBuilders.existsQuery("hentPerson.doedfoedtBarn.metadata"),
+                                ScoreMode.Avg
+                        )).must();
+                    }
+                });
     }
 
 
